--- a/templates/ind.html
+++ b/templates/ind.html
@@ -7,13 +7,6 @@
 
   </head>
   <body>
-
-    <div class="container"><br>
-      <center>
-        <h2>Flask Web Form Demo</h2>
-      </center>
-    </div>
-
     <div class=container"><br>
     <div class="row align-items-center justify-content-center">
     <div class="col-md-4">
@@ -29,8 +22,30 @@
 	  <label for="email">Email:</label>
 	  <input type="text" class="form-control" id="email" name="email" placeholder="Your email address.">
 	    <br>
-	  <label for="password">Password:</label>
-	  <input type="password" class="form-control" id="password" name="password" placeholder="Enter a password.">
+	  <label for="phone">Phone:</label>
+	  <input type="text" class="form-control" id="phone" name="phone" placeholder="Phone number">
+            <br>
+	  <label for="phone">Address:</label>
+	  <input type="text" class="form-control" id="address" name="address" placeholder="Home address">
+       <br>
+      <label for="phone">Country of residence:</label>
+	  <input type="text" class="form-control" id="country" name="country" placeholder="Country name">
+            <div class="form-group">
+                  <label for="name">Charter comapany:</label>
+          <input type="text" class="form-control" id="companyName" name="companyName" placeholder="Company name">
+                <label for="name">Sailing area:</label>
+          <input type="text" class="form-control" id="sailingBase" name="sailingBase" placeholder="Charter base location">
+            <br>
+            </div>
+            <div class="form-group">
+                <label for="name">Charter travel start:</label>
+          <input type="date" class="form-control" id="startDate" name="startDate" placeholder="Date">
+                <label for="name">Charter travel finish:</label>
+          <input type="date" class="form-control" id="endDate" name="endDate" placeholder="Date">
+            </div>
+             <label for="name">Deposit:</label>
+          <input type="number" class="form-control" id="deposit" name="deposit" placeholder="Deposit amount">
+
 	</div>
         <br>
         <center>
